--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "http-proxy": "^1.18.1",
     "node-fetch": "^3.3.0",
     "open": "^8.4.2"
