--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/glob": "^8.1.0",
     "@types/http-proxy": "^1.17.10",
     "@types/mocha": "^10.0.1",
