--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
     "@types/vscode": "^1.76.0",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "@vscode/test-electron": "^2.2.3",
@@ -54,6 +55,7 @@
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
     "node-fetch": "^3.3.0",
-    "open": "^8.4.2"
+    "open": "^8.4.2",
+    "ws": "^8.13.0"
   }
 }
