Remove command from command palette

--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
       }
     ],
       "menus": {
+        "commandPalette": [
+          {
+              "command": "gitit.openUrl",
+              "when": "false"
+          }
+      ],
         "explorer/context": [{
             "command": "gitit.openUrl"
       }]
