--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
         "title": "Edit in Grafana"
       }
     ],
-      "menus": {
-        "commandPalette": [
-          {
-              "command": "gitit.openUrl",
-              "when": "false"
-          }
+    "menus": {
+      "commandPalette": [
+        {
+          "command": "gitit.openUrl",
+          "when": "false"
+        }
       ],
-        "explorer/context": [{
-            "command": "gitit.openUrl"
-      }]
+      "explorer/context": [
+        {
+          "command": "gitit.openUrl"
+        }
+      ]
     },
     "configuration": {
       "title": "GitIt",
@@ -37,12 +39,17 @@
         "gitit.URL": {
           "type": "string",
           "default": "http://localhost:3000",
-          "description": "grafana instance URL"
+          "description": "Gafana instance URL"
         },
         "gitit.cookie": {
           "type": "string",
           "default": "",
-          "description": "active grafana_session cookie"
+          "description": "Active grafana_session cookie"
+        },
+        "gitit.message": {
+          "type": "boolean",
+          "default": "true",
+          "description": "Show popup message when dashboard JSON is detected"
         }
       }
     }
