--- a/.github/workflows/dashboards.yml
+++ b/.github/workflows/dashboards.yml
@@ -15,13 +15,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get changed dashboards
-        id: changed-dashboards
+        id: changed-files
         uses: tj-actions/changed-files@v35
         with:
           files: dashboards/**.json
 
       - name: Update changed dashboards in Grafana
-        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           tmp=$(mktemp)
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
