--- a/.github/workflows/dashboards.yml
+++ b/.github/workflows/dashboards.yml
@@ -31,7 +31,7 @@ jobs:
             currentVersion=$(echo $info | jq -r '.meta.version')
             newVersion=$((currentVersion + 1))
             jq --argjson v $newVersion '.version = $v' $file > $tmp && mv $tmp $file
-            dashboardJson='{"dashboard":'"$(cat $file)"',"folderUid":"$folderUid","overwrite":true,"message":"$COMMIT_MESSAGE"}'
+            dashboardJson='{"dashboard":'"$(cat $file)"',"folderUid":"'"$folderUid"'","overwrite":true,"message":"'"$COMMIT_MESSAGE"'"}'
             echo $dashboardJson
             curl -X POST $GRAFANA_INSTANCE_URL/api/dashboards/db  -H "Authorization: Bearer $GRAFANA_API_TOKEN" -d "$dashboardJson"
           done
