Fix dashboard version

--- a/.github/workflows/dashboards.yml
+++ b/.github/workflows/dashboards.yml
@@ -26,10 +26,9 @@ jobs:
           tmp=$(mktemp)
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             uid=$(jq -r '.uid' $file)
-            info=$(curl -H "Authorization: Bearer $GRAFANA_API_TOKEN" $GRAFANA_INSTANCE_URL/api/dashboards/uid/$uid)
-            currentVersion=$(echo $info | jq -r '.meta.version')
-            newVersion=$((currentVersion + 1))
-            jq --argjson v $newVersion '.version = $v' $file > $tmp && mv $tmp $file
+            dashboardInfo=$(curl -H "Authorization: Bearer $GRAFANA_API_TOKEN" $GRAFANA_INSTANCE_URL/api/dashboards/uid/$uid)
+            currentVersion=$(echo $dashboardInfo | jq -r '.meta.version')
+            jq --argjson v $currentVersion '.version = $v' $file > $tmp && mv $tmp $file
             dashboardJson='{"dashboard":'"$(jq -c . $file)"',"message":"'"$COMMIT_MESSAGE"'"}'
             echo $dashboardJson
             curl -X POST $GRAFANA_INSTANCE_URL/api/dashboards/db -H "Content-Type: application/json" -H "Authorization: Bearer $GRAFANA_API_TOKEN" -d "$dashboardJson"
