--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/glob": "^8.1.0",
     "@types/http-proxy": "^1.17.10",
@@ -85,6 +86,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
     "node-fetch": "^3.3.0",
