--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "gitit",
   "displayName": "gitIt",
   "description": "Hackaton project",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "license": "AGPL-3.0-only",
   "engines": {
     "vscode": "^1.76.0"
   },
@@ -95,8 +96,6 @@
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.6",
-    "node-fetch": "^3.3.0",
-    "open": "^8.4.2",
-    "ws": "^8.13.0"
+    "open": "^8.4.2"
   }
 }
