--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
