--- a/package.json
+++ b/package.json
@@ -107,12 +107,14 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@types/source-map-support": "^0.5.8",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.6",
     "open": "^8.4.2",
+    "source-map-support": "^0.5.21",
     "transformer-proxy": "^0.3.5"
   }
 }
