Only show menu for json files

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
       ],
       "explorer/context": [
         {
-          "command": "grafana-vscode.openUrl"
+          "command": "grafana-vscode.openUrl",
+          "when": "resourceExtname == .json"
         }
       ]
     },
