--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "author": "Grafana Labs",
   "displayName": "Grafana",
   "description": "Grafana Editor",
+  "icon": "public/grafana_icon.png",
   "version": "0.0.6",
   "license": "Apache-2.0",
   "repository": "github:grafana/grafana-vs-code-extension",
   "engines": {
     "vscode": "^1.76.0"
   },
+  "publisher": "Grafana",
   "categories": [
-    "Other"
+    "Visualization"
+  ],
+  "keywords": [
+    "Grafana",
+    "dashboards"
   ],
   "activationEvents": [
     "onStartupFinished"
