Tidy README and git repo

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "displayName": "Grafana",
   "description": "Grafana Editor",
   "icon": "public/grafana_icon.png",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "license": "Apache-2.0",
-  "repository": "github:grafana/grafana-vs-code-extension",
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/grafana/grafana-vs-code-extension"
+  },
   "engines": {
     "vscode": "^1.76.0"
   },
