--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "version": "0.0.12",
   "license": "Apache-2.0",
   "repository": {
-		"type": "git",
-		"url": "https://github.com/grafana/grafana-vs-code-extension"
+    "type": "git",
+    "url": "https://github.com/grafana/grafana-vs-code-extension"
   },
   "engines": {
     "vscode": "^1.76.0"
@@ -115,6 +115,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.6",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
