--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "version": "0.0.12",
   "license": "Apache-2.0",
   "repository": {
-		"type": "git",
-		"url": "https://github.com/grafana/grafana-vs-code-extension"
+    "type": "git",
+    "url": "https://github.com/grafana/grafana-vs-code-extension"
   },
   "engines": {
     "vscode": "^1.76.0"
@@ -77,7 +77,13 @@
           "type": "boolean",
           "default": true,
           "markdownDescription": "A service account token for your Grafana instance. Click the link below to add this to secure storage.\n\n[Set your token, securely](command:grafana-vscode.setPassword)",
-          "order":2
+          "order": 2
+        },
+        "grafana-vscode.telemetry": {
+          "type": "boolean",
+          "default": true,
+          "markdownDescription": "Enable basic telemetry. All data is anonymous and only used to help with feature prioritization/gloating/etc.",
+          "order": 3
         }
       }
     }
@@ -115,6 +121,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.6",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -122,6 +129,7 @@
     "http-proxy-middleware": "^2.0.6",
     "open": "^8.4.2",
     "source-map-support": "^0.5.21",
-    "transformer-proxy": "^0.3.5"
+    "transformer-proxy": "^0.3.5",
+    "uuid": "^9.0.1"
   }
 }
