--- a/package.json
+++ b/package.json
@@ -79,6 +79,17 @@
           "markdownDescription": "A service account token for your Grafana instance. Click the link below to add this to secure storage.\n\n[Set your token, securely](command:grafana-vscode.setPassword)",
           "order": 2
         },
+        "grafana-vscode.theme": {
+          "type": "string",
+          "default": "inherit",
+          "enum": ["inherit", "fixed", "dark", "light"],
+          "enumDescriptions": [
+            "Inherit Grafana theme from VSCode",
+            "Use Grafana's own default theme",
+            "Use dark Grafana theme",
+            "Use light Grafana theme"
+          ]
+        },
         "grafana-vscode.telemetry": {
           "type": "boolean",
           "default": true,
