--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "ES2021",
+    "esModuleInterop": true,
     "lib": ["ES2021"],
     "sourceMap": true,
     "rootDir": "src",
