--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
       "explorer/context": [
         {
           "command": "grafana-vscode.openUrl",
-          "when": "resourceExtname == .json"
+          "when": "resourceExtname == .json || resourceExtname == .yaml || resourceExtname == .yml"
         }
       ]
     },
@@ -145,6 +145,7 @@
     "open": "^8.4.2",
     "source-map-support": "^0.5.21",
     "transformer-proxy": "^0.3.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yaml": "^2.5.1"
   }
 }
