--- a/.github/workflows/dashboards.yml
+++ b/.github/workflows/dashboards.yml
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Get changed dashboards
         id: changed-files
-        uses: tj-actions/changed-files@v41
+        uses: tj-actions/changed-files@4edd678ac3f81e2dc578756871e4d00c19191daf #v45.0.4
         with:
           files: dashboards/**.json
 
