--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
 
-# These permissions are needed to assume roles from Github's OIDC.
+# These permissions are needed to assume roles from GitHub's OIDC.
 permissions:
   contents: write
   id-token: write
@@ -46,35 +46,9 @@ jobs:
             build: "🏗️ Build System"
             perf: "⚡ Performance Improvements"
             chore: "🔧 Miscellaneous Chores"
-  
-  lint:
-    needs: release-please
-    if: needs.release-please.outputs.release_created
-    
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
-        with:
-          # https://github.com/actions/checkout/issues/1467
-          fetch-depth: 0
-          ref: "${{ needs.release-please.outputs.release_tag }}"
-
-      - name: Install devbox
-        uses: jetify-com/devbox-install-action@a03caf5813591bc882139eba6ae947930a83a427 #v0.11.0
-        with:
-          enable-cache: 'true'
-
-      - name: Install vendors
-        run: devbox run yarn install --frozen-lockfile
-
-      - name: Compile codebase
-        run: devbox run yarn run compile
-
-      - name: Run linters
-        run: devbox run yarn run lint
 
   publish:
-    needs: [lint, release-please]
+    needs: release-please
     if: needs.release-please.outputs.release_created
 
     runs-on: ubuntu-latest
