--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: CI
 on:
   pull_request: ~
+  push:
+    branches:
+      - main
 
 jobs:
   linters:
@@ -9,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install devbox
-        uses: jetify-com/devbox-install-action@v0.11.0
+        uses: jetify-com/devbox-install-action@270f8b2a010f03386d4dcd192eb89535df7b674b #v0.13.7
         with:
           enable-cache: 'true'
 
