--- a/.github/workflows/dashboards.yml
+++ b/.github/workflows/dashboards.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Get changed dashboards
         id: changed-files
-        uses: tj-actions/changed-files@v41
+        uses: tj-actions/changed-files@bab30c2299617f6615ec02a68b9a40d10bd21366 #v41.0.5
         with:
           files: dashboards/**.json
 
