--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,25 +10,6 @@ permissions:
 
 name: Publish Extension
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install devbox
-        uses: jetify-com/devbox-install-action@v0.11.0
-        with:
-          enable-cache: 'true'
-
-      - name: Install vendors
-        run: devbox run yarn install --frozen-lockfile
-
-      - name: Compile codebase
-        run: devbox run yarn run compile
-
-      - name: Run linters
-        run: devbox run yarn run lint
-
   publish:
     needs: lint
 
@@ -37,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install devbox
-        uses: jetify-com/devbox-install-action@v0.11.0
+        uses: jetify-com/devbox-install-action@270f8b2a010f03386d4dcd192eb89535df7b674b #v0.13.7
         with:
           enable-cache: 'true'
 
@@ -62,7 +43,7 @@ jobs:
         run: devbox run vsce publish --pat ${{ env.VS_MARKETPLACE_TOKEN }} --packagePath grafana-vscode.vsix
 
       - name: Create GitHub release
-        uses: ncipollo/release-action@v1
+        uses: ncipollo/release-action@2c591bcc8ecdcd2db72b97d6147f871fcd833ba5 #v1.14.0
         with:
           allowUpdates: true
           artifacts: "grafana-vscode.vsix"
