--- a/.github/workflows/dashboards.yml
+++ b/.github/workflows/dashboards.yml
@@ -7,12 +7,17 @@ on:
     paths:
       - dashboards/**.json
 
+permissions:
+  contents: read
+
 jobs:
   update-dashboards:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
+        with:
+          persist-credentials: false
 
       - name: Get changed dashboards
         id: changed-files
